@@ -2,6 +2,7 @@ Changed between 1.3.2 and 1.3.3
 ===============================
 - Fix all 3 style menus for any translation (#61007)
 - Fix loading of tabulators in old KWord documents (part of #73351)
+- Restart numbering starting a new list (#68927)
 
 Changed between 1.3.1 and 1.3.2
 ===============================
